--- a/projects/todo-app/src/assets/i18n/hi.json
+++ b/projects/todo-app/src/assets/i18n/hi.json
@@ -10,6 +10,7 @@
     "ACTIONS": "कार्रवाई",
     "COMPLETED": "पूर्ण",
     "PENDING": "लंबित",
+    "NO_TASKS": "कोई कार्य उपलब्ध नहीं है। कृपया एक नया कार्य जोड़ें।",
 
     "ADD_NEW": "नया कार्य जोड़ें",
     "ADD_TASK": "कार्य जोड़ें",
@@ -26,5 +27,16 @@
     "TASK_ADDED": "कार्य सफलतापूर्वक जोड़ा गया!",
     "TASK_DELETED": "कार्य हटा दिया गया।",
     "TASK_UPDATED": "कार्य सफलतापूर्वक अपडेट किया गया!"
-  }
+  },
+
+  "LOGIN": {
+  "TITLE":               "स्वागत है",
+  "SUBTITLE":            "अपने कार्य प्रबंधित करने के लिए साइन इन करें",
+  "EMAIL_PLACEHOLDER":   "अपना ईमेल दर्ज करें",
+  "PASSWORD_PLACEHOLDER":"अपना पासवर्ड दर्ज करें",
+  "SUBMIT":              "साइन इन करें",
+  "SUCCESS":             "सफलतापूर्वक लॉग इन किया!"
+}
+
+  
 }
