--- a/projects/todo-app/src/assets/i18n/hi.json
+++ b/projects/todo-app/src/assets/i18n/hi.json
@@ -36,7 +36,13 @@
   "PASSWORD_PLACEHOLDER":"अपना पासवर्ड दर्ज करें",
   "SUBMIT":              "साइन इन करें",
   "SUCCESS":             "सफलतापूर्वक लॉग इन किया!"
-}
+},
 
+"LOGOUT": {
+  "TITLE": "लॉगआउट",
+  "MESSAGE": "क्या आप वाकई लॉगआउट करना चाहते हैं?",
+  "YES": "हाँ",
+  "NO": "नहीं"
+}
   
 }
