--- a/projects/todo-app/src/assets/i18n/hi.json
+++ b/projects/todo-app/src/assets/i18n/hi.json
@@ -35,7 +35,8 @@
   "EMAIL_PLACEHOLDER":   "अपना ईमेल दर्ज करें",
   "PASSWORD_PLACEHOLDER":"अपना पासवर्ड दर्ज करें",
   "SUBMIT":              "साइन इन करें",
-  "SUCCESS":             "सफलतापूर्वक लॉग इन किया!"
+  "SUCCESS":             "सफलतापूर्वक लॉग इन किया!",
+  "ERROR":               "अमान्य ईमेल या पासवर्ड।"
 },
 
 "LOGOUT": {
