--- a/projects/todo-app/src/assets/i18n/en.json
+++ b/projects/todo-app/src/assets/i18n/en.json
@@ -36,6 +36,7 @@
   "PASSWORD_PLACEHOLDER":"Enter your password",
   "SUBMIT":              "Sign In",
   "SUCCESS":             "Logged in successfully!",
+  "ERROR":               "Invalid email or password.",
   "NO_ACCOUNT":          "Don't have an account?",
   "REGISTER":            "Register here"
 },
